src/objects/IPM_Document_Template__c.object
<CustomObject>
    <description>To Capture the Document Template Master based on the Project Template</description>
    <fields>
        <fullName>IPM_Document_Order__c</fullName>
        <description>TO capture the Order for of a document</description>
        <label>IPM Document Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPM_Document_Template_Name__c</fullName>
        <description>To capture the Name of the Document Template</description>
        <label>IPM Document Template Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Document_Type__c</fullName>
        <description>To capture the Document Type</description>
        <label>IPM Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>Charter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Deployment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Project_Template__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to the Project Template</description>
        <label>IPM Project Template</label>
        <referenceTo>IPM_Project_Template__c</referenceTo>
        <relationshipLabel>IPM Document Templates</relationshipLabel>
        <relationshipName>IPM_Document_Templates</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>IPM Document Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>IPM_Document_Template_Name__c</columns>
        <columns>IPM_Document_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IDT-{0000}</displayFormat>
        <label>IPM Document Template Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IPM Document Templates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>